fixed spacing around map

--- a/css/_map.scss
+++ b/css/_map.scss
@@ -11,5 +11,5 @@
   }
 }
 .map-wrap {
-  padding: 0;
+  padding-right: .5%;
 }
