--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ form#bandadeform {
       background: none; }
 
 .map-wrap {
-  padding: 0; }
+  padding-right: .5%; }
 
 @media only screen and (max-width: 54.9375em) {
   #artist, #radius {
